--- a/src/index.scss
+++ b/src/index.scss
@@ -16,8 +16,9 @@ body {
 }
 
 header {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template: 1fr / calc(70% - 1.5rem) calc(30% - 1.5rem);
+  gap: 2rem;
   margin-bottom: 2rem;
   h1 {
     margin: 0;
@@ -28,7 +29,109 @@ header {
     font-size: 1.125rem;
     font-weight: normal;
   }
+  .header__left {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    column-gap: 1rem;
+    flex-direction: column;
+    h1 {
+      margin: 0;
+    }
+    h2 {
+      margin: 0;
+    }
+  }
+  .header__right {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    column-gap: 1rem;
+  }
 }
+.login_signup_container {
+  display: grid;
+  grid-template: 1fr / calc(35% - 1.5rem) calc(65% - 1.5rem);
+  max-width: 900px;
+  gap: 3rem;
+}
+.login_view,
+.signup_view {
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+    border-top: 1px solid hsl(270, 50%, 25%);
+    padding-top: 1.5em;
+    label {
+      margin-bottom: 1rem;
+      input {
+        display: block;
+        width: 100%;
+        margin-top: 0.5rem;
+        padding: 0.75rem;
+        border: 1px solid hsl(270, 50%, 25%);
+        // border-radius: 0.25rem;
+        background-color: hsl(270, 50%, 15%);
+        color: hsl(270, 50%, 75%);
+        font-size: 1em;
+        font-weight: normal;
+        &:focus {
+          outline: none;
+          border-color: hsl(270, 50%, 35%);
+        }
+      }
+    }
+    // button {
+    //   display: inline-block;
+    //   width: max-content;
+    //   padding: 0.75em 1.5em;
+    //   border: 1px solid hsl(270, 50%, 25%);
+    //   border-radius: 0.25rem;
+    //   background-color: hsl(270, 50%, 40%);
+    //   color: hsl(270, 50%, 75%);
+    //   font-size: 1em;
+    //   font-weight: normal;
+    //   cursor: pointer;
+    //   &:hover {
+    //     background-color: hsl(270, 50%, 35%);
+    //   }
+    // }
+  }
+}
+
+.signup_view {
+  form {
+    flex-direction: row;
+    flex-wrap: wrap;
+    label {
+      width: calc(50% - 0.75em);
+    }
+  }
+}
+
+button.main_button {
+  display: inline-block;
+  width: max-content;
+  padding: 0.75em 1.5em;
+  font-size: 1em;
+  background-color: hsl(270, 50%, 30%);
+  color: hsl(270, 50%, 75%);
+  border: none;
+  font-weight: normal;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
+  &:hover {
+    background-color: hsl(270, 50%, 50%);
+  }
+  &.main_button--small {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    // background-color: hsl(270, 50%, 25%);
+    // color: hsl(270, 50%, 75%);
+  }
+}
+
 .cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -73,7 +176,6 @@ header {
     object-fit: cover;
   }
 }
-
 .movie__view {
   padding-top: 10vh;
   &:only-child {
@@ -98,16 +200,4 @@ header {
   margin-bottom: 1rem;
   padding: 2vh 10vw;
   background-color: hsl(270, 50%, 15%);
-  button {
-    background-color: hsl(270, 50%, 25%);
-    color: hsl(270, 50%, 75%);
-    border: none;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    font-weight: normal;
-    cursor: pointer;
-    &:hover {
-      background-color: hsl(270, 50%, 35%);
-    }
-  }
 }
