--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,13 @@
 @import './variables';
 @import '~bootstrap/scss/bootstrap.scss';
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .nav-link {
   color: $info;
   border-bottom: 2px solid transparent;
