--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 }
 
 .nav-link {
-  color: $info;
+  color: $light;
   border-bottom: 2px solid transparent;
   &.current {
     border-bottom: 2px solid currentColor;
